# FastAndRobustMeshArrangements

./: .gitignore  CMakeLists.txt  README.md  example.pro  example_gui.pro  main.cpp  solve_intersections.h  unstable_booleans.cpp  unstable_booleans.h
code/: aux_structure.cpp  bfstream.cpp  bfstream.h  debug.h  fast_trimesh.cpp  fast_trimesh.h  io_functions.cpp  io_functions.h  triangulation.cpp
